# Pro100GUI

./: .gitattributes  .gitignore  Pro100GUI.pyw  README.md  ROADMAP.md  bootstrap.py  pyproject.toml
.github/workflows/: no-ea-files.yml
docs/: build_user_guide.py
installer/: Pro100GUI.iss  build.py
pro100gui/: __init__.py
pro100gui/adapters/: __init__.py  addfr_config.py  ea_registry.py  ea_version_checker.py  files_staging.py  ini_file.py  paths.py  pdf_qc.py  pdf_renderer.py  set_file.py  terminal_runner.py
pro100gui/app/: __init__.py  main.py  settings_store.py
pro100gui/core/: __init__.py  filters.py  models.py  periods.py  pro100_csv.py  tf.py  twr.py
pro100gui/gui/: __init__.py  first_run_wizard.py  main_window.py  screen_config.py  screen_results.py  screen_run.py  screen_settings.py  worker.py
pro100gui/orchestrator/: __init__.py  events.py  orchestrator.py  session.py
tests/: test_addfr_config.py  test_ea_registry.py  test_ea_version_checker.py  test_events.py  test_files_staging.py  test_filters.py  test_first_run_wizard.py  test_ini_file.py  test_main_window_resume.py  test_orchestrator.py  test_paths.py  test_pdf_qc.py  test_pdf_renderer.py  test_periods.py  test_pro100_csv.py  test_screen_config.py  test_screen_results.py  test_screen_run.py  test_screen_settings.py  test_session.py  test_set_file.py  test_terminal_runner.py  test_tf.py  test_twr.py
tests/fixtures/: tg_xauruspro_16.html
tools/: install_hooks.py
tools/hooks/: pre-commit
