[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pro100gui"
version = "0.0.1"
description = "GUI orchestrator for Pro100 MT5 strategy tester pipeline"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "imyavel" }]

dependencies = [
    "PySide6>=6.6",
    "reportlab>=4.4",
    "pypdfium2>=4.30",
    "pypdf>=4.0",
    "Pillow>=10.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.setuptools.packages.find]
include = ["pro100gui*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
